Add uv script alias for launching app

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
 
 [project.scripts]
 "video-slicer" = "video_slicer.main:main"
+svs = "video_slicer.main:main"
 
 [project.optional-dependencies]
 dev = [
